--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,7 @@
         </li>
     </ul>
     <div class="centered">
-        <a href="http://172.20.10.2:5500/index.html">ゲームページに戻る</a>
+        <a href="https://shimauma2310.github.io/kojinseisaku/">ゲームページに戻る</a>
     </div>
 </body>
 
