--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button class="saiseibotan" id="play"><img src="play_icon_764.png" alt="Button Image"></button>
     <button class="teisibotan" id="pause"><img src="pose_icon_804.png" alt="Button Image"></button>
     <div class="centered">
-        <a href="http://172.20.10.2:5500/index2.html"><img src="1035.png" alt="Button Image"></a>
+        <a href="index2.html"><img src="1035.png" alt="Button Image"></a>
     </div>
     <div class="container">
         <div class="item"><label for="digits">Digits:</label></div>
