--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button class="saiseibotan" id="play"><img src="play_icon_764.png" alt="Button Image"></button>
     <button class="teisibotan" id="pause"><img src="pose_icon_804.png" alt="Button Image"></button>
     <div class="centered">
-        <botton><img src="1035_2.png" alt="Button Image"></botton>
+        <a href="index2.html"><img src="1035_2.png"></a>
     </div>
     <div class="container">
         <div class="item"><label for="digits">Digits:</label></div>
