--- a/index2.html
+++ b/index2.html
@@ -19,6 +19,9 @@
     <ul>
         <li>
             <h2>スマホなどで操作する場合は横画面推奨です</h2>
+            <li>
+            <h3>利便性を向上させるためキーボードのショートカットの使用を推奨します。<br>次の入力フィールドー＞Tabキー<br>前の入力フィールドー＞shift＋Tabキー</h3>
+            </li>
         </li>
         <li>
             <h2>まず桁数を決めます。<br>デフォルトでは4桁となっており最大で10桁まで増やせます</h2>
