--- a/index2.html
+++ b/index2.html
@@ -24,19 +24,19 @@
             <h2>まず桁数を決めます。<br>デフォルトでは4桁となっており最大で10桁まで増やせます</h2>
         </li>
         <li>
-            <h2>次に制限時間を決めます。<br><h3>デフォルトでは60秒となっておりこちらは上限を決めていないのでご自由に決めてください</h3></h2>
+            <h2>次に制限時間を決めます。<br><li><h3>デフォルトでは60秒となっておりこちらは上限を決めていないのでご自由に決めてください</h3></li></h2>
         </li>
         <li>
-            <h2>ゲーム開始を押すと始まります<br><h3>始まると残り時間が表示され、一定の時間が経過するとヒントが表示されます</h3></h2>
+            <h2>ゲーム開始を押すと始まります<br><li><h3>始まると残り時間が表示され、一定の時間が経過するとヒントが表示されます</h3></li></h2>
         </li>
         <li>
             <h2>ゲームが終了するともう一度プレイできるボタンが出てくるので同じ設定でやり直せることができます</h2>
         </li>
         <li>
-            <h2>HITとは<br><h3>数字が当たり且つ入力された順番も当たるとHITとなります。</h3></h2>
+            <h2>HITとは<br><li><h3>数字が当たり且つ入力された順番も当たるとHITとなります。</h3></li></h2>
         </li>
         <li>
-            <h2>BLOWとは<br><h3>数字が当たりはしたけど順番があっていないとBLOWとなります。</h3></h2>
+            <h2>BLOWとは<br><li><h3>数字が当たりはしたけど順番があっていないとBLOWとなります。</h3></li></h2>
         </li>
         <li>
             <h2>最後に左上のボタンやスライダーでBGMの再生停止や音量調整ができます</h2>
