--- a/index2.html
+++ b/index2.html
@@ -18,8 +18,9 @@
 
     <ul>
         <li>
-            <h2>スマホなどで操作する場合は横画面推奨です</h2><h3>利便性を向上させるためキーボードのショートカットの使用を推奨します。<br>次の入力フィールドー＞Tabキー<br>前の入力フィールドー＞shift＋Tabキー<br>入力フィールド上で十字キーの上下で数値を変更できます</h3>
+            <h2>スマホなどで操作する場合は横画面推奨です</h2>
         </li>
+        <h3>利便性を向上させるためキーボードのショートカットの使用を推奨します。<br>次の入力フィールドー＞Tabキー<br>前の入力フィールドー＞shift＋Tabキー<br>入力フィールド上で十字キーの上下で数値を変更できます</h3>
         <li>
             <h2>まず桁数を決めます。<br>デフォルトでは4桁となっており最大で10桁まで増やせます</h2>
         </li>
