--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
         <li>
             <h2>スマホなどで操作する場合は横画面推奨です</h2>
         </li>
-        <h2>利便性を向上させるためキーボードのショートカットの使用を推奨します。</h2><h3><次の入力フィールドー＞Tabキー<br>前の入力フィールドー＞shift＋Tabキー<br>入力フィールド上で十字キーの上下で数値を変更できます</h3>
+        <li><h2>利便性を向上させるためキーボードのショートカットの使用を推奨します。</h2><h3><次の入力フィールドー＞Tabキー<br>前の入力フィールドー＞shift＋Tabキー<br>入力フィールド上で十字キーの上下で数値を変更できます</h3></li>
         <li>
             <h2>まず桁数を決めます。<br>デフォルトでは4桁となっており最大で10桁まで増やせます</h2>
         </li>
