--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>HIT&BLOW</h1>
+    <div id="debugArea" style="display: none;">
+        <p id="secretNumberDisplay"></p>
+    </div>
     <audio id="bgm" src="脳烈サバイバー.mp3" loop></audio>
     <div class="onryou">
         <label for="volumeControl"><img src="11730_3.png"></label>
