--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <label for="volumeControl"><img src="11730_3.png"></label>
         <input type="range" id="volumeControl" min="0" max="100" step="1" value="50">
     </div>
+    <div class="centered"><a href="index2.html"><img src="1035_2.png"></a></div>
     <button class="saiseibotan" id="play"><img src="play_icon_764.png" alt="Button Image"></button>
     <button class="teisibotan" id="pause"><img src="pose_icon_804.png" alt="Button Image"></button>
     <div class="container">
