--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>HIT&BLOW</h1>
+    <h1>NUMBER SEEK</h1>
     <audio id="bgm" src="脳烈サバイバー.mp3" loop></audio>
     <div class="onryou">
         <label for="volumeControl"><img src="11730_3.png"></label>
