--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="container">
         <div class="item"><label for="timeLimit">TimeLimit (seconds):</label></div>
-        <input type="number" id="timeLimit" min="10" value="60">
+        <input type="number" id="timeLimit" min="10" max="300" value="60">
     </div>
     <div class="container">
         <button id="startButton">GameStart</button>
