--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
             <h2>まず桁数を決めます。<br>デフォルトでは4桁となっており最大で10桁まで増やせます</h2>
         </li>
         <li>
-            <h2>次に制限時間を決めます。<br></h2><h3>デフォルトでは60秒となっておりこちらは上限を決めていないのでご自由に決めてください</h3>
+            <h2>次に制限時間を決めます。<br></h2><h3>デフォルトでは60秒となっておりこちらは上限を300までとさせていただきます。</h3>
         </li>
         <li>
             <h2>ゲーム開始を押すと始まります<br></h2><h3>始まると残り時間が表示され、一定の時間が経過するとヒントが表示されます</h3>
